Inserção de informações de edução, experiências e redes sociais

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <div class="w3-light-grey w3-round-xlarge">
                 <div
                   class="w3-round-xlarge w3-teal"
-                  style="height:24px;width:50%"
+                  style="height:24px;width:40%"
                 ></div>
               </div>
               <br />
@@ -152,7 +152,12 @@
               ></i
               >Sobre
             </h2>
-            <p>TODO</p>
+            <p>
+              Sou bacharel em ciências biológicas (UPE), com ênfase em
+              biotecnologia, mestre em ciências e tecnologia dos Alimentos pela
+              UFRPE. Atualmente, estou em processo de transição de carreira para
+              a área da Tecnologia voltada para desenvolvimento web Front-End.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -160,23 +165,37 @@
               <i
                 class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
               ></i
-              >Experiências
+              >Experiências Anteriores
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>Líder operacional</b></h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO -
-                <span class="w3-tag w3-teal w3-round">Atual</span>
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - set
+                de 2018 | FIM - mar de 2019
               </h6>
-              <p>TODO</p>
+              <p>
+                Processamento de exames laboratoriais nos setores de automação,
+                através dos equipamentos AU, DXI Unicell, Immulite, Architect e
+                Cobas. Gestão e execução de calibrações e controles de qualidade
+                interno para processamento de exames clínicos. Liberação dos
+                laudos de pacientes através dos sistemas Matrix Connect e
+                Diagnosis. Verificação da reprodutibilidade de exames
+                laboratoriais entre plataformas distintas.
+              </p>
               <hr />
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>Auxiliar administrativo</b></h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - jan
+                de 2014 | FIM -
               </h6>
-              <p>TODO</p>
+              <p>
+                Organização de treinamentos para alunos interessados em se
+                qualificar para as normas ISO 9001. Experiência com auditorias
+                internas. Experiência com vendas e pós-vendas, setor de
+                terceirização de serviços.
+              </p>
             </div>
           </div>
 
@@ -190,29 +209,59 @@
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO -
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - 15
+                Abril/2023
                 <span class="w3-tag w3-teal w3-round">Atual</span>
               </h6>
               <p>
-                Maior plataforma de educação aberta em TI da América Latina, com
-                mais 1 milhão de usuários. A DIO possui parcerias com algumas
-                das empresas mais inovadoras do mundo, proporcionando
-                experiências de ensino imersivas e com foco em empregabilidade.
-                Nesse contexto, seguem meus principais certificados:
+                Potência Tech Angular Developer - Powered by Ifood.
+                Desenvolvimento Front-End voltado para HTML, CSS, JavaScript e
+                Angular
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li>
+                  <a
+                    href="https://www.dio.me/certificate/EEC1F513"
+                    target="_blank"
+                    >Introdução ao Desenvolvimento Web com JavaScript</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://www.dio.me/certificate/8DA14833"
+                    target="_blank"
+                  >
+                    Dominando o Protocolo HTTP
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.dio.me/certificate/76DA3BE1"
+                    target="_blank"
+                    >Introdução ao Git e ao GitHub</a
+                  >
+                </li>
               </ul>
               <hr />
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
+              <h5 class="w3-opacity"><b>Ada Tech - Let's Code</b></h5>
               <h6 class="w3-text-teal">
-                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM
+                <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO -
+                Agosto 2022 | FIM - Fevereiro 2023
               </h6>
-              <p>TODO</p>
+              <p>
+                Programa OiDevs - Desenvolvimento Front-End com enfase em HTML,
+                CSS, Javascript e ReactJs
+              </p>
+              <ul>
+                <li>
+                  <a href="/img/boletim.pdf" target="_blank"
+                    >HTML, CSS, JavaScript, ReactJs</a
+                  >
+                </li>
+              </ul>
+              <hr />
             </div>
           </div>
 
@@ -226,17 +275,25 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a
+                  href="https://github.com/Ivina-als/Pokedex-Dio"
+                  target="_blank"
+                  >Desafio Pokedex</a
+                >
               </h6>
-              <p>TODO</p>
+              <p>Front End dinâmico em Vanilla, com consumo de API (PokeAPI)</p>
               <hr />
             </div>
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <a
+                  href="https://github.com/Ivina-als/connect-ada-OiDevs"
+                  target="_blank"
+                  >Projeto ConnectAda</a
+                >
               </h6>
-              <p>TODO</p>
+              <p>Modelagem de rede social estruturado em POO</p>
             </div>
           </div>
 
@@ -251,20 +308,13 @@
 
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"
+      <a href="https://github.com/Ivina-als" target="_blank"
         ><i class="fa fa-github w3-hover-opacity"></i
       ></a>
-      <a href="LINK_LINKEDIN" target="_blank"
+      <a
+        href="https://www.linkedin.com/in/ivina-a-silva-343078234/"
+        target="_blank"
         ><i class="fa fa-linkedin w3-hover-opacity"></i
-      ></a>
-      <a href="LINK_FACEBOOK" target="_blank"
-        ><i class="fa fa-facebook-official w3-hover-opacity"></i
-      ></a>
-      <a href="LINK_INSTAGRAM" target="_blank"
-        ><i class="fa fa-instagram w3-hover-opacity"></i
-      ></a>
-      <a href="LINK_TWITTER" target="_blank"
-        ><i class="fa fa-twitter w3-hover-opacity"></i
       ></a>
       <p>
         Powered by
