mudanças de cor template

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </div>
             <div class="w3-container">
               <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a
                   href="https://github.com/Ivina-als/connect-ada-OiDevs"
                   target="_blank"
