--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
             <div class="w3-container">
               <p>
                 <i
-                  class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-deep-pulple"
                 ></i
                 >Desenvolvedora Front-End
               </p>
               <p>
                 <i
-                  class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-home fa-fw w3-margin-right w3-large w3-text-deep-pulple"
                 ></i
                 >Jaboatão dos Guararapes-PE
               </p>
               <p>
                 <i
-                  class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-deep-pulple"
                 ></i
                 >ivina.albuquerque.silva@gmail.com
               </p>
               <p>
                 <i
-                  class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"
+                  class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-deep-pulple"
                 ></i
                 >(81) 99796-8088
               </p>
@@ -65,7 +65,7 @@
               <p class="w3-large">
                 <b
                   ><i
-                    class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"
+                    class="fa fa-asterisk fa-fw w3-margin-right w3-text-deep-pulple"
                   ></i
                   >Skills</b
                 >
@@ -73,7 +73,7 @@
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  class="w3-container w3-center w3-round-xlarge w3-deep-pulple"
                   style="width:80%"
                 >
                   80%
@@ -82,7 +82,7 @@
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  class="w3-container w3-center w3-round-xlarge w3-deep-pulple"
                   style="width:60%"
                 >
                   60%
@@ -91,7 +91,7 @@
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  class="w3-container w3-center w3-round-xlarge w3-deep-pulple"
                   style="width:70%"
                 >
                   70%
@@ -100,7 +100,7 @@
               <p>ReactJs</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div
-                  class="w3-container w3-center w3-round-xlarge w3-teal"
+                  class="w3-container w3-center w3-round-xlarge w3-deep-pulple"
                   style="width:50%"
                 >
                   50%
@@ -110,28 +110,30 @@
 
               <p class="w3-large w3-text-theme">
                 <b
-                  ><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i
+                  ><i
+                    class="fa fa-globe fa-fw w3-margin-right w3-text-deep-pulple"
+                  ></i
                   >Idiomas</b
                 >
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div
-                  class="w3-round-xlarge w3-teal"
+                  class="w3-round-xlarge w3-deep-pulple"
                   style="height:24px;width:100%"
                 ></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div
-                  class="w3-round-xlarge w3-teal"
+                  class="w3-round-xlarge w3-deep-pulple"
                   style="height:24px;width:60%"
                 ></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
                 <div
-                  class="w3-round-xlarge w3-teal"
+                  class="w3-round-xlarge w3-deep-pulple"
                   style="height:24px;width:40%"
                 ></div>
               </div>
@@ -148,7 +150,7 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+                class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-deep-pulple"
               ></i
               >Sobre
             </h2>
@@ -163,13 +165,13 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+                class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-deep-pulple"
               ></i
               >Experiências Anteriores
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Líder operacional</b></h5>
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - set
                 de 2018 | FIM - mar de 2019
               </h6>
@@ -186,7 +188,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Auxiliar administrativo</b></h5>
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - jan
                 de 2014 | FIM -
               </h6>
@@ -202,16 +204,16 @@
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+                class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-deep-pulple"
               ></i
               >Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - 15
                 Abril/2023
-                <span class="w3-tag w3-teal w3-round">Atual</span>
+                <span class="w3-tag w3-deep-pulple w3-round">Atual</span>
               </h6>
               <p>
                 Potência Tech Angular Developer - Powered by Ifood.
@@ -246,7 +248,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Ada Tech - Let's Code</b></h5>
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO -
                 Agosto 2022 | FIM - Fevereiro 2023
               </h6>
@@ -268,12 +270,12 @@
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
               <i
-                class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"
+                class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-deep-pulple"
               ></i
               >Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a
                   href="https://github.com/Ivina-als/Pokedex-Dio"
@@ -285,7 +287,7 @@
               <hr />
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text-deep-pulple">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a
                   href="https://github.com/Ivina-als/connect-ada-OiDevs"
@@ -306,7 +308,7 @@
       <!-- End Page Container -->
     </div>
 
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3-deep-pulple w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/Ivina-als" target="_blank"
         ><i class="fa fa-github w3-hover-opacity"></i
